# analyzit

package/: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
package/data/: README.md  database_endocrine.csv  database_products.csv  raw_database_paraben.csv
package/data/code_database/: extract_organize_database_products.ipynb  modification_and_merge_database_dangers.ipynb
package/data/filering_databases/: modification_and_merge_databasedangers.ipynb
package/docs/source/: conf.py
package/notebooks/: README.md  analyzit.ipynb  analyzit_report.ipynb  analyzit_report_url
package/src/analyzit_cosmetics/: __init__.py  functions.py
package/tests/: test_example_module.py  test_functions.py
