[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyzit"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Analysis of the composition of cosmetics and tracking of how dangerous are the products used by the user."
dependencies = [ "rdkit","pandas>=1.0.0","seaborn = ^0.11.1"
"matplotlib = ^3.3.2"
]
authors = [
    {name = "Gillian", email = "gillian.dreyfus@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/gdryf/analyzit"
tracker = "https://github.com/gdryf/analyzit/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/analyzit_cosmetics/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["analyzit"]
